# pokemon_scouting

./: .flake8  .gitignore  Dockerfile  README.md  app.py  config.py  config.yml  database.py  docker-compose.yml  models.py  pokemon_list.yml  pyproject.toml  requirements.txt  routes.py  swagger.yml  utils.py
services/: pokeapi_client.py
tests/: test_api.py
